# hoi-datasets

./: .gitignore  README.md  h2o_stats.ipynb  pyproject.toml
src/hoi/: __main__.py  widgets.py
src/hoi/datasets/: __init__.py  _dataset.py  _h2o.py
src/hoi/structs/: __init__.py  _box.py  _sample.py
